--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:  
   port: ${PORT:8761}
-    
+  ssl:
+    key-store: keystore.jks
+    key-store-password: password
+    key-password: password
+
 eureka:  
   instance:
     hostname: localhost
