--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:  
   port: ${PORT:2222}
+  ssl:
+    key-store: keystore.jks
+    key-store-password: password
+    key-password: password
 
 spring:  
   application:
@@ -14,7 +18,7 @@ spring:
 eureka:  
   client:
     serviceUrl:
-      defaultZone: ${DISCOVERY_URL:http://localhost:8761}/eureka/
+      defaultZone: ${DISCOVERY_URL:https://localhost:8761}/eureka/
   instance:
     leaseRenewalIntervalInSeconds: 1
     leaseExpirationDurationInSeconds: 2
